Code drop from //branches/cupcake/...@124589